--- a/main.css
+++ b/main.css
@@ -425,3 +425,19 @@ footer {
         font-size: 3rem;
     }
 }
+.icono img{
+    width: 30px;
+    height: 30px;
+}
+.icono2 img{
+    width: 30px;
+    height: 30px;
+}
+.icono3 img{
+    width: 30px;
+    height: 30px;
+}
+.icono4 img{
+    width: 30px;
+    height: 30px;
+}
